--- a/content-assistant.html
+++ b/content-assistant.html
@@ -1334,7 +1334,7 @@
                 height: auto!important
             }
         </style>
-        <title>Alison | Become an Assisted Course Creators</title>
+        <title>Fhorge | Become an Assisted Course Creators</title>
         <meta name="description" content="Assisted Course Creators build courses with the help of Content Assistants.">
         <style ng-transition="serverApp">
             .feedback-card[_ngcontent-sc15] {
@@ -1524,7 +1524,7 @@
                             <div _ngcontent-sc17="" class="achievement-bar hidden md:flex py-7 px-20">
                                 <div _ngcontent-sc17="" class="achievement-item w-full flex items-center">
                                     <p _ngcontent-sc17="" class="achievement-name alison-h5 mb-0">
-                                        Alison’s <b _ngcontent-sc17="" class="highlited-text">Content Assistants</b>
+                                        Fhorge’s <b _ngcontent-sc17="" class="highlited-text">Content Assistants</b>
                                         Empower Millions 
                                     </p>
                                 </div>
@@ -1547,7 +1547,7 @@
                             </div>
                             <div _ngcontent-sc17="" class="mobile-achievement-bar achievement-bar md:hidden py-6 alison-shadow-low">
                                 <h4 _ngcontent-sc17="" class="text-center mobile-achievement-title title-color alison-body-secondary md:alison-body px-6 pb-4">
-                                    Alison’s <b _ngcontent-sc17="" class="highlited-text">Content Assistants</b>
+                                    Fhorge’s <b _ngcontent-sc17="" class="highlited-text">Content Assistants</b>
                                     Empower Millions 
                                 </h4>
                                 <div _ngcontent-sc17="" class="mobile-achievement-cards-container items-center grid px-6 grid-cols-2 gap-4 sm:gap-6">
@@ -1571,8 +1571,8 @@
                                 <app-feedback-slider _ngcontent-sc17="" _nghost-sc14="">
                                     <div _ngcontent-sc14="" class="py-6 md:pt-12 md:pb-16 px-6 md:px-10 lg:px-20 feedback-section">
                                         <div _ngcontent-sc14="" class="pb-6 md:pb-10">
-                                            <h2 _ngcontent-sc17="" class="alison-h2 md:alison-title title-color text-center hidden md:block">What Alison’s Content Assistants have to say </h2>
-                                            <h2 _ngcontent-sc17="" class="alison-h2 title-color text-center block md:hidden">What Alison’s Content Assistants have to say </h2>
+                                            <h2 _ngcontent-sc17="" class="alison-h2 md:alison-title title-color text-center hidden md:block">What Fhorge’s Content Assistants have to say </h2>
+                                            <h2 _ngcontent-sc17="" class="alison-h2 title-color text-center block md:hidden">What Fhorge’s Content Assistants have to say </h2>
                                         </div>
                                         
                                         <section _ngcontent-sc14="" aria-labelledby="feedback-slider" class="splide w-full feedback-slider">
@@ -1595,7 +1595,7 @@
                                                                     </div>
                                                                     <div _ngcontent-sc15="" class="quote-icon icon-double-quote-right alison-icon-md"></div>
                                                                 </div>
-                                                                <div _ngcontent-sc15="" class="feedback-card-body mb-7 alison-caption">My experience with Alison as a Content Assistant has been excellent. Working for Alison has helped me improve my internet research skills and sharpen my time management skills. I would recommend anyone with a great work ethic to work for Alison because they are wonderful and helpful people who will always be there for you and make time for you. </div>
+                                                                <div _ngcontent-sc15="" class="feedback-card-body mb-7 alison-caption">My experience with Fhorge as a Content Assistant has been excellent. Working for Fhorge has helped me improve my internet research skills and sharpen my time management skills. I would recommend anyone with a great work ethic to work for Fhorge because they are wonderful and helpful people who will always be there for you and make time for you. </div>
                                                             </div>
                                                         </app-feedback-item>
                                                     </li>
@@ -1616,7 +1616,7 @@
                                                                     </div>
                                                                     <div _ngcontent-sc15="" class="quote-icon icon-double-quote-right alison-icon-md"></div>
                                                                 </div>
-                                                                <div _ngcontent-sc15="" class="feedback-card-body mb-7 alison-caption">Alison made me discover my passion for the e-learning industry while allowing me to build a career path along the way. I would recommend working with Alison to those who are passionate about the e-learning industry. You can take your skills to the next level, impact lives, and make money while working from home. So, it is a win-win situation. </div>
+                                                                <div _ngcontent-sc15="" class="feedback-card-body mb-7 alison-caption">Fhorge made me discover my passion for the e-learning industry while allowing me to build a career path along the way. I would recommend working with Fhorge to those who are passionate about the e-learning industry. You can take your skills to the next level, impact lives, and make money while working from home. So, it is a win-win situation. </div>
                                                             </div>
                                                         </app-feedback-item>
                                                     </li>
@@ -1637,7 +1637,7 @@
                                                                     </div>
                                                                     <div _ngcontent-sc15="" class="quote-icon icon-double-quote-right alison-icon-md"></div>
                                                                 </div>
-                                                                <div _ngcontent-sc15="" class="feedback-card-body mb-7 alison-caption">I was trained and mentored on course creation and started earning income that helped to complement my low-paying job. I bought land in my village and constructed a house through this work. During Covid-19, Alison was my only source of income. I plan to purchase land in the city and set up other investments. </div>
+                                                                <div _ngcontent-sc15="" class="feedback-card-body mb-7 alison-caption">I was trained and mentored on course creation and started earning income that helped to complement my low-paying job. I bought land in my village and constructed a house through this work. During Covid-19, Fhorge was my only source of income. I plan to purchase land in the city and set up other investments. </div>
                                                             </div>
                                                         </app-feedback-item>
                                                     </li>
@@ -1778,10 +1778,10 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">LEARN ABOUT ALISON</div>
+                            <div class="footer_h3">LEARN ABOUT FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/about/how-it-works">How Alison Works</a>
+                                    <a href="https://alison.com/about/how-it-works">How Fhorge Works</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/about-alison-courses">About Alison Courses</a>
@@ -1790,13 +1790,13 @@
                                     <a href="https://alison.com/about/our-story">Our Story</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/programmes">Alison Programmes</a>
+                                    <a href="https://alison.com/programmes">Fhorge Programmes</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/course-creators">Our Course Creators</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/empower-us">Empower Alison</a>
+                                    <a href="https://alison.com/empower-us">Empower Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/pricing">Pricing</a>
@@ -1834,7 +1834,7 @@
                                     <a href="https://alison.com/graduate-outcomes">Graduate Outcomes</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/testimonials">Alison Testimonials</a>
+                                    <a href="https://alison.com/testimonials">Fhorge Testimonials</a>
                                 </li>
                                 <li>
                                     <a title="Coronavirus Emergency - Free Course" href="https://alison.com/coronavirus">COVID19 Emergency Courses</a>
@@ -1863,7 +1863,7 @@
                                     <a href="https://alison.com/careers">Discover Careers</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/profile">Alison Profile</a>
+                                    <a href="https://alison.com/profile">Fhorge Profile</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/cv?source=profile">Build Your Resumé</a>
@@ -1875,7 +1875,7 @@
                                     <a href="https://alison.com/psychometric-test/wellbeing">Free Well-being Check up</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/free-lms-programme">Alison for Business</a>
+                                    <a href="https://alison.com/free-lms-programme">Fhorge for Business</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/e-learning-africa">eLearning Africa</a>
@@ -1895,10 +1895,10 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">EARN ON ALISON</div>
+                            <div class="footer_h3">EARN ON FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/publish">Create Courses on Alison</a>
+                                    <a href="https://alison.com/publish">Create Courses on Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/affiliates/learn-to-earn">Affiliate Programme</a>
@@ -1991,19 +1991,19 @@
                 <div class="row-5 policies">
                     <ul class="policies-list">
                         <li class="icon-rights">
-                            <span>&copy;Alison 2023</span>
+                            <span>&copy;Fhorge 2023</span>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Alison Privacy Policy">Privacy</a>
+                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Fhorge Privacy Policy">Privacy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use" title="Alison Terms and conditions">Terms</a>
+                            <a href="https://alison.com/about/terms-of-use" title="Fhorge Terms and conditions">Terms</a>
                         </li>
                         <li class="icon-rights">
-                            <a class="cancel-scroll" href="https://alison.com/about/terms-of-use?privacy-policy#alison_cookie_policy" title="Alison Cookie Policy">Cookie Policy</a>
+                            <a class="cancel-scroll" href="https://alison.com/about/terms-of-use?privacy-policy#alison_cookie_policy" title="Fhorge Cookie Policy">Cookie Policy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/sitemap" title="Alison Sitemap">Sitemap</a>
+                            <a href="https://alison.com/sitemap" title="Fhorge Sitemap">Sitemap</a>
                         </li>
                     </ul>
                 </div>
