--- a/course-cat.html
+++ b/course-cat.html
@@ -180,10 +180,10 @@
         <script defer src="https://cdn01.alison-static.net/public/html/vendor/js/lazysizes.min.js?v=2.1" onload="extendFunctionality()"></script>
         <link rel="manifest" href="https://alison.com/manifest.json">
         <meta charset="utf-8">
-        <title>Free Online IT and Computing Courses | Alison</title>
+        <title>Free Online IT and Computing Courses | Fhorge</title>
         <meta name="keywords" content=""/>
         <meta name="description" content="Discover free online IT and computing courses. Enrol today and grow your IT and computing skills and boost your career with Alison."/>
-        <meta property="og:title" content="Free Online IT and Computing Courses | Alison"/>
+        <meta property="og:title" content="Free Online IT and Computing Courses | Fhorge"/>
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://cdn01.alison-static.net/public/html/site/img/sharing/alison-share-careers.png">
         <meta property="og:url" content="https://alison.com/courses/it"/>
@@ -192,7 +192,7 @@
         <meta name="twitter:site" content="@AlisonCourses">
         <meta name="twitter:creator" content="@AlisonCourses">
         <meta name="twitter:url" content="https://alison.com/courses/it">
-        <meta name="twitter:title" content="Free Online IT and Computing Courses | Alison">
+        <meta name="twitter:title" content="Free Online IT and Computing Courses | Fhorge">
         <meta name="twitter:description" content="Discover free online IT and computing courses. Enrol today and grow your IT and computing skills and boost your career with Alison.">
         <meta name="twitter:image" content="https://cdn01.alison-static.net/public/html/site/img/sharing/alison-share-careers.png">
         <meta name="csrf-token" content="C1jACmE4DSDq01J41dc4BOaAdlAutDqwuaAO12vd">
@@ -313,7 +313,7 @@
                 </style>
                 <p>
                     <span class="icon-mobile-applications"></span>
-                    Alison's New App is now available on iOS and Android! <a target="_blank" rel="nofollow" href="https://alisonmobile.page.link/homepage" class="btn btn-green" title="">Download Now </a>
+                    Fhorge's New App is now available on iOS and Android! <a target="_blank" rel="nofollow" href="https://alisonmobile.page.link/homepage" class="btn btn-green" title="">Download Now </a>
                     <span class="icon-mobile-applications"></span>
                 </p>
             </div>
@@ -515,7 +515,7 @@
                             </div>
                             <div class="flms-copy">
                                 <p>Do you represent a business or organization that would like to train and upskill their employees?</p>
-                                <p>If yes, check out Alison’s Free Learning Management System here!</p>
+                                <p>If yes, check out Fhorge’s Free Learning Management System here!</p>
                                 <div class="flms-but">
                                     <a href="https://alison.com/free-lms-programme" class="btn-flms btn-flms--green">Yes</a>
                                     <a href="#0" class="btn-flms btn-flms--blank">Not For Me</a>
@@ -534,7 +534,7 @@
                             <span class="icon-cross2 aff__close"></span>
                             <img class="lazyload" data-src="/html/site/img/affiliates/not-affiliate.svg"/>
                             <div class="aff__text">
-                                <p>Become an Alison Affiliate in one click, and start earning money by sharing any page on the Alison website. </p>
+                                <p>Become an Fhorge Affiliate in one click, and start earning money by sharing any page on the Fhorge website. </p>
                                 <a class="aff__btn" href="https://alison.com/affiliates/learn-to-earn">Become an Affiliate</a>
                             </div>
                         </div>
@@ -718,7 +718,7 @@
     <div id="search" class="fullwidth-search" data-endpoint="https://api.alison.com/v0.1" data-url="https://alison.com/courses" data-ads-enabled=" true ">
         <div class="wrapper">
             <div title="Courses" class="active-page" style="display: none">
-                <p>Discover top online courses at Alison®. Our free online courses were designed by experts and universities to give you an interactive and enriched learning experience. Alison® online courses are the most affordable and flexible way to learn and gain new skills while earning valuable certificates and degrees, for free.</p>
+                <p>Discover top online courses at Fhorge®. Our free online courses were designed by experts and universities to give you an interactive and enriched learning experience. Fhorge® online courses are the most affordable and flexible way to learn and gain new skills while earning valuable certificates and degrees, for free.</p>
             </div>
             <div class="search-tab">
                 <div id="search-sticky" class="sticky-ad search-sticky search-sticky--index">
@@ -1351,7 +1351,7 @@
                                     <p>
                                         <span id="docs-internal-guid-5a1cbf13-7fff-e091-600e-2414ca21b0a9">
                                             <span style="font-size: 10.5pt; font-family: Verdana; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">
-                                                Alison's <a href="https://alison.com/courses/it">free online IT courses</a>
+                                                Fhorge's <a href="https://alison.com/courses/it">free online IT courses</a>
                                                 include clear and simple lessons on how to manage networks, develop software, process data and maintain vital information technology (IT) systems across computers, phones and more. There are over 400 courses to choose from, from short certificates to comprehensive diploma courses. If you wish to start with a short course, we recommend the
                                             </span>
                                             <a style="text-decoration-line: none;" href="https://alison.com/course/basics-of-computer-networking">
@@ -1389,7 +1389,7 @@
                                 <div class="answer" style="display: none;">
                                     <p>
                                         <span id="docs-internal-guid-a307f48d-7fff-a381-18c4-73e7e492271e">
-                                            <span style="font-size: 11pt; font-family: Arial; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">If you are looking for the best free online certificate courses in IT, you are in the right place with Alison. Boost your skillset and your r &eacute;sum &eacute;with expert tuition ahead of some of the leading industry standard exams. We can recommend </span>
+                                            <span style="font-size: 11pt; font-family: Arial; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">If you are looking for the best free online certificate courses in IT, you are in the right place with Fhorge. Boost your skillset and your r &eacute;sum &eacute;with expert tuition ahead of some of the leading industry standard exams. We can recommend </span>
                                             <a style="text-decoration-line: none;" href="https://alison.com/course/comptia-a-1000-part-1">
                                                 <span style="font-size: 11pt; font-family: Arial; color: #1155cc; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; text-decoration-line: underline; text-decoration-skip-ink: none; vertical-align: baseline; white-space: pre-wrap;">CompTIA A+ 1000 - Part 1</span>
                                             </a>
@@ -1424,7 +1424,7 @@
                                 </div>
                                 <div class="answer" style="display: none;">
                                     <p>
-                                        <span style="font-size: 11pt; font-family: Arial; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">Enhance your career prospects with a free online diploma course in IT from Alison. These are in-depth courses that cover a topic comprehensively, yet can still be completed in under 20 hours. We recommend the </span>
+                                        <span style="font-size: 11pt; font-family: Arial; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">Enhance your career prospects with a free online diploma course in IT from Fhorge. These are in-depth courses that cover a topic comprehensively, yet can still be completed in under 20 hours. We recommend the </span>
                                         <a style="text-decoration-line: none;" href="https://alison.com/course/diploma-in-computer-networking-revised">
                                             <span style="font-size: 10.5pt; font-family: Verdana; color: #1155cc; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; text-decoration-line: underline; text-decoration-skip-ink: none; vertical-align: baseline; white-space: pre-wrap;">Diploma in Computer Networking</span>
                                         </a>
@@ -1446,13 +1446,13 @@
                             </div>
                             <div class="single-wrap">
                                 <div class="question ">
-                                    Why choose Alison? 
+                                    Why choose Fhorge? 
                                     <div class="reveal">
                                         <span class="icon-chevron-down vertical-align"></span>
                                     </div>
                                 </div>
                                 <div class="answer" style="display: none;">
-                                    <p>Alison offers hundreds of online IT courses designed by experts and universities to provide you with an interactive and enriched learning experience. Our web-based delivery system means that you can explore course offerings from a place and at a pace that is convenient for you. All courses are free, and upon completion, you can download an official certificate or diploma as proof of your achievement, depending upon the course you choose. Enroll today.</p>
+                                    <p>Fhorge offers hundreds of online IT courses designed by experts and universities to provide you with an interactive and enriched learning experience. Our web-based delivery system means that you can explore course offerings from a place and at a pace that is convenient for you. All courses are free, and upon completion, you can download an official certificate or diploma as proof of your achievement, depending upon the course you choose. Enroll today.</p>
                                     <a class="category-meta__get-started btn-blue btn" href="#get-started" title="Get Started">Get Started </a>
                                 </div>
                             </div>
@@ -1502,7 +1502,7 @@
                                 <div class="answer" style="display: none;">
                                     <p>
                                         <span id="docs-internal-guid-52b63fe7-7fff-6deb-39c0-191385a287d3">
-                                            <span style="font-size: 11pt; font-family: Arial; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space: pre-wrap;">Each of the online IT courses on Alison are free, as are all of Alison's online courses. Alison's learners do not have to pay anything to take these courses unless they want a digital or physical copy of the course certificate. </span>
+                                            <span style="font-size: 11pt; font-family: Arial; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space: pre-wrap;">Each of the online IT courses on Fhorge are free, as are all of Fhorge's online courses. Fhorge's learners do not have to pay anything to take these courses unless they want a digital or physical copy of the course certificate. </span>
                                         </span>
                                     </p>
                                     <a class="category-meta__get-started btn-blue btn" href="#get-started" title="Get Started">Get Started </a>
@@ -1567,25 +1567,25 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">LEARN ABOUT ALISON</div>
+                            <div class="footer_h3">LEARN ABOUT FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/about/how-it-works">How Alison Works</a>
+                                    <a href="https://alison.com/about/how-it-works">How Fhorge Works</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/about/about-alison-courses">About Alison Courses</a>
+                                    <a href="https://alison.com/about/about-alison-courses">About Fhorge Courses</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/our-story">Our Story</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/programmes">Alison Programmes</a>
+                                    <a href="https://alison.com/programmes">Fhorge Programmes</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/course-creators">Our Course Creators</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/empower-us">Empower Alison</a>
+                                    <a href="https://alison.com/empower-us">Empower Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/pricing">Pricing</a>
@@ -1623,7 +1623,7 @@
                                     <a href="https://alison.com/graduate-outcomes">Graduate Outcomes</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/testimonials">Alison Testimonials</a>
+                                    <a href="https://alison.com/testimonials">Fhorge Testimonials</a>
                                 </li>
                                 <li>
                                     <a title="Coronavirus Emergency - Free Course" href="https://alison.com/coronavirus">COVID19 Emergency Courses</a>
@@ -1652,7 +1652,7 @@
                                     <a href="https://alison.com/careers">Discover Careers</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/profile">Alison Profile</a>
+                                    <a href="https://alison.com/profile">Fhorge Profile</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/cv?source=profile">Build Your Resumé</a>
@@ -1664,7 +1664,7 @@
                                     <a href="https://alison.com/psychometric-test/wellbeing">Free Well-being Check up</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/free-lms-programme">Alison for Business</a>
+                                    <a href="https://alison.com/free-lms-programme">Fhorge for Business</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/e-learning-africa">eLearning Africa</a>
@@ -1684,10 +1684,10 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">EARN ON ALISON</div>
+                            <div class="footer_h3">EARN ON FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/publish">Create Courses on Alison</a>
+                                    <a href="https://alison.com/publish">Create Courses on Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/affiliates/learn-to-earn">Affiliate Programme</a>
@@ -1770,17 +1770,17 @@
                 </div>
                 <div class="row-4 apps">
                     <a href="https://apps.apple.com/app/apple-store/id1558468968?pt=118422314&ct=portal_app_page&mt=8" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Alison app on iPhone">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Fhorge app on iPhone">
                     </a>
                     <a href="https://play.google.com/store/apps/details?id=com.alison.mobile.flutter" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Alison app on Android">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Fhorge app on Android">
                     </a>
                 </div>
                 <div class="clearfix"></div>
                 <div class="row-5 policies">
                     <ul class="policies-list">
                         <li class="icon-rights">
-                            <span>&copy;Alison 2023</span>
+                            <span>&copy;Fhorge 2023</span>
                         </li>
                         <li class="icon-rights">
                             <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Alison Privacy Policy">Privacy</a>
