--- a/course-creator-application-received.html
+++ b/course-creator-application-received.html
@@ -162,8 +162,8 @@
         <meta charset="utf-8">
         <title>Free Online Courses from the World’s Top Publishers </title>
         <meta name="keywords" content="Fhorge, free online courses, free online training, learning, education"/>
-        <meta name="description" content="Join 30 million learners and explore 4000+ free online courses from top publishers. Alison is the leading provider of free online classes & online learning."/>
-        <meta property="og:title" content="Free Online Courses & Online Learning from Alison"/>
+        <meta name="description" content="Join 30 million learners and explore 4000+ free online courses from top publishers. Fhorge is the leading provider of free online classes & online learning."/>
+        <meta property="og:title" content="Free Online Courses & Online Learning from Fhorge"/>
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://cdn01.alison-static.net/public/html/site/img/sharing/alison-share-careers.png">
         <meta property="og:url" content="https://alison.com/publish/course-creator-application-received"/>
@@ -172,7 +172,7 @@
         <meta name="twitter:site" content="@AlisonCourses">
         <meta name="twitter:creator" content="@AlisonCourses">
         <meta name="twitter:url" content="https://alison.com/publish/course-creator-application-received">
-        <meta name="twitter:title" content="Free Online Courses & Online Learning from Alison">
+        <meta name="twitter:title" content="Free Online Courses & Online Learning from Fhorge">
         <meta name="twitter:description" content="Join 30 million learners and explore 4000+ free online courses from top publishers. Alison is the leading provider of free online classes & online learning.">
         <meta name="twitter:image" content="https://cdn01.alison-static.net/public/html/site/img/sharing/alison-share-careers.png">
         <meta name="csrf-token" content="eC4aGdLV7mayxuUyj32k70Q2To7n1Ivzsp22PkqY">
@@ -300,7 +300,7 @@
                 </style>
                 <p>
                     <span class="icon-mobile-applications"></span>
-                    Alison's New App is now available on iOS and Android! <a target="_blank" rel="nofollow" href="https://alisonmobile.page.link/homepage" class="btn btn-green" title="">Download Now </a>
+                    Fhorge's New App is now available on iOS and Android! <a target="_blank" rel="nofollow" href="https://alisonmobile.page.link/homepage" class="btn btn-green" title="">Download Now </a>
                     <span class="icon-mobile-applications"></span>
                 </p>
             </div>
@@ -502,7 +502,7 @@
                             </div>
                             <div class="flms-copy">
                                 <p>Do you represent a business or organization that would like to train and upskill their employees?</p>
-                                <p>If yes, check out Alison’s Free Learning Management System here!</p>
+                                <p>If yes, check out Fhorge’s Free Learning Management System here!</p>
                                 <div class="flms-but">
                                     <a href="https://alison.com/free-lms-programme" class="btn-flms btn-flms--green">Yes</a>
                                     <a href="#0" class="btn-flms btn-flms--blank">Not For Me</a>
@@ -521,7 +521,7 @@
                             <span class="icon-cross2 aff__close"></span>
                             <img class="lazyload" data-src="html/site/img/affiliates/not-affiliate.svg"/>
                             <div class="aff__text">
-                                <p>Become an Alison Affiliate in one click, and start earning money by sharing any page on the Alison website. </p>
+                                <p>Become an Fhorge Affiliate in one click, and start earning money by sharing any page on the Fhorge website. </p>
                                 <a class="aff__btn" href="https://alison.com/affiliates/learn-to-earn">Become an Affiliate</a>
                             </div>
                         </div>
@@ -546,7 +546,7 @@
                                     </span>
                                     <span>
                                         <div class="head__u-name">Abimbola Josiah</div>
-                                        <a class="new-profile-link" href="https://alison.com/profile/31474844/edit" title="Your Alison Profile">
+                                        <a class="new-profile-link" href="https://alison.com/profile/31474844/edit" title="Your Fhorge Profile">
                                             Finish Your Profile <span></span>
                                         </a>
                                     </span>
@@ -711,13 +711,13 @@
             <div class="info-block">
                 We would like to remind you that this is a BETA programme for which final terms and conditions of use are subject to change.<br/>
                 <br/>
-                If you have not done so already, please complete Alison’s course on E-Learning Pedagogy and the course on how to use our Publishing Tool. If your application is successful you will receive an email directing you to these courses and offering further information.<br/>
+                If you have not done so already, please complete Fhorge’s course on E-Learning Pedagogy and the course on how to use our Publishing Tool. If your application is successful you will receive an email directing you to these courses and offering further information.<br/>
                 <br/>
-                These courses provide a crucial foundation for becoming a successful and highly productive member of the Alison Publishing Community!<br/>
+                These courses provide a crucial foundation for becoming a successful and highly productive member of the Fhorge Publishing Community!<br/>
                 <br/>
                 Best of Luck!<br/>
                 <br/>
-                Alison Publishing Team<br/>
+                Fhorge Publishing Team<br/>
                 <br/>
             </div>
         </div>
@@ -771,25 +771,25 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">LEARN ABOUT ALISON</div>
+                            <div class="footer_h3">LEARN ABOUT FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/about/how-it-works">How Alison Works</a>
+                                    <a href="https://alison.com/about/how-it-works">How Fhorge Works</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/about/about-alison-courses">About Alison Courses</a>
+                                    <a href="https://alison.com/about/about-alison-courses">About Fhorge Courses</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/our-story">Our Story</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/programmes">Alison Programmes</a>
+                                    <a href="https://alison.com/programmes">Fhorge Programmes</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/course-creators">Our Course Creators</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/empower-us">Empower Alison</a>
+                                    <a href="https://alison.com/empower-us">Empower Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/pricing">Pricing</a>
@@ -827,7 +827,7 @@
                                     <a href="https://alison.com/graduate-outcomes">Graduate Outcomes</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/testimonials">Alison Testimonials</a>
+                                    <a href="https://alison.com/testimonials">Fhorge Testimonials</a>
                                 </li>
                                 <li>
                                     <a title="Coronavirus Emergency - Free Course" href="https://alison.com/coronavirus">COVID19 Emergency Courses</a>
@@ -856,7 +856,7 @@
                                     <a href="https://alison.com/careers">Discover Careers</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/profile">Alison Profile</a>
+                                    <a href="https://alison.com/profile">Fhorge Profile</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/cv?source=profile">Build Your Resumé</a>
@@ -868,7 +868,7 @@
                                     <a href="https://alison.com/psychometric-test/wellbeing">Free Well-being Check up</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/free-lms-programme">Alison for Business</a>
+                                    <a href="https://alison.com/free-lms-programme">Fhorge for Business</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/e-learning-africa">eLearning Africa</a>
@@ -888,10 +888,10 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">EARN ON ALISON</div>
+                            <div class="footer_h3">EARN ON FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/publish">Create Courses on Alison</a>
+                                    <a href="https://alison.com/publish">Create Courses on Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/affiliates/learn-to-earn">Affiliate Programme</a>
@@ -974,29 +974,29 @@
                 </div>
                 <div class="row-4 apps">
                     <a href="https://apps.apple.com/app/apple-store/id1558468968?pt=118422314&ct=portal_app_page&mt=8" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Alison app on iPhone">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Fhorge’son iPhone">
                     </a>
                     <a href="https://play.google.com/store/apps/details?id=com.alison.mobile.flutter" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Alison app on Android">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Fhorge app on Android">
                     </a>
                 </div>
                 <div class="clearfix"></div>
                 <div class="row-5 policies">
                     <ul class="policies-list">
                         <li class="icon-rights">
-                            <span>&copy;Alison 2023</span>
+                            <span>&copy;Fhorge 2023</span>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Alison Privacy Policy">Privacy</a>
+                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Fhorge Privacy Policy">Privacy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use" title="Alison Terms and conditions">Terms</a>
+                            <a href="https://alison.com/about/terms-of-use" title="Fhorge Terms and conditions">Terms</a>
                         </li>
                         <li class="icon-rights">
-                            <a class="cancel-scroll" href="https://alison.com/about/terms-of-use?privacy-policy#alison_cookie_policy" title="Alison Cookie Policy">Cookie Policy</a>
+                            <a class="cancel-scroll" href="https://alison.com/about/terms-of-use?privacy-policy#alison_cookie_policy" title="Fhorge Cookie Policy">Cookie Policy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/sitemap" title="Alison Sitemap">Sitemap</a>
+                            <a href="https://alison.com/sitemap" title="Fhorge Sitemap">Sitemap</a>
                         </li>
                     </ul>
                 </div>
