--- a/course-creator-application.html
+++ b/course-creator-application.html
@@ -162,10 +162,10 @@
         <script defer src="https://cdn01.alison-static.net/public/html/vendor/js/lazysizes.min.js?v=2.1" onload="extendFunctionality()"></script>
         <link rel="manifest" href="https://alison.com/manifest.json">
         <meta charset="utf-8">
-        <title>Apply to become an Alison Publisher today | Alison</title>
-        <meta name="keywords" content="Alison Publish Application"/>
-        <meta name="description" content="Fill out Alison’s Publisher Application form and get started on your journey towards becoming a successful publisher of online courses."/>
-        <meta property="og:title" content="Apply to become an Alison Publisher today | Alison"/>
+        <title>Apply to become an Fhorge Publisher today | Fhorge</title>
+        <meta name="keywords" content="Fhorge Publish Application"/>
+        <meta name="description" content="Fill out Fhorge’s Publisher Application form and get started on your journey towards becoming a successful publisher of online courses."/>
+        <meta property="og:title" content="Apply to become an Alison Publisher today | Fhorge"/>
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://cdn01.alison-static.net/public/html/site/img/sharing/alison-share-careers.png">
         <meta property="og:url" content="https://alison.com/publish/course-creator-application"/>
@@ -174,8 +174,8 @@
         <meta name="twitter:site" content="@AlisonCourses">
         <meta name="twitter:creator" content="@AlisonCourses">
         <meta name="twitter:url" content="https://alison.com/publish/course-creator-application">
-        <meta name="twitter:title" content="Apply to become an Alison Publisher today | Alison">
-        <meta name="twitter:description" content="Fill out Alison’s Publisher Application form and get started on your journey towards becoming a successful publisher of online courses.">
+        <meta name="twitter:title" content="Apply to become an Alison Publisher today | Fhorge">
+        <meta name="twitter:description" content="Fill out Fhorge’s Publisher Application form and get started on your journey towards becoming a successful publisher of online courses.">
         <meta name="twitter:image" content="https://cdn01.alison-static.net/public/html/site/img/sharing/alison-share-careers.png">
         <meta name="csrf-token" content="GnzId4gjUuAfEgBsFWN5xvp9DDXTzEWB8ATGaTcF">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -304,7 +304,7 @@
                 </style>
                 <p>
                     <span class="icon-mobile-applications"></span>
-                    Alison's New App is now available on iOS and Android! <a target="_blank" rel="nofollow" href="https://alisonmobile.page.link/homepage" class="btn btn-green" title="">Download Now </a>
+                    Fhorge's New App is now available on iOS and Android! <a target="_blank" rel="nofollow" href="https://alisonmobile.page.link/homepage" class="btn btn-green" title="">Download Now </a>
                     <span class="icon-mobile-applications"></span>
                 </p>
             </div>
@@ -506,7 +506,7 @@
                             </div>
                             <div class="flms-copy">
                                 <p>Do you represent a business or organization that would like to train and upskill their employees?</p>
-                                <p>If yes, check out Alison’s Free Learning Management System here!</p>
+                                <p>If yes, check out Fhorge’s Free Learning Management System here!</p>
                                 <div class="flms-but">
                                     <a href="https://alison.com/free-lms-programme" class="btn-flms btn-flms--green">Yes</a>
                                     <a href="#0" class="btn-flms btn-flms--blank">Not For Me</a>
@@ -525,7 +525,7 @@
                             <span class="icon-cross2 aff__close"></span>
                             <img class="lazyload" data-src="html/site/img/affiliates/not-affiliate.svg"/>
                             <div class="aff__text">
-                                <p>Become an Alison Affiliate in one click, and start earning money by sharing any page on the Alison website. </p>
+                                <p>Become an Fhorge Affiliate in one click, and start earning money by sharing any page on the Fhorge website. </p>
                                 <a class="aff__btn" href="https://alison.com/affiliates/learn-to-earn">Become an Affiliate</a>
                             </div>
                         </div>
@@ -550,7 +550,7 @@
                                     </span>
                                     <span>
                                         <div class="head__u-name">Abimbola Josiah</div>
-                                        <a class="new-profile-link" href="https://alison.com/profile/31474844/edit" title="Your Alison Profile">
+                                        <a class="new-profile-link" href="https://alison.com/profile/31474844/edit" title="Your Fhorge Profile">
                                             Finish Your Profile <span></span>
                                         </a>
                                     </span>
@@ -743,7 +743,7 @@
                                             <div class="row">
                                                 <div class="col-sm-12">
                                                     <p>
-                                                        <strong>Interested in becoming an Alison Course Creator?</strong>
+                                                        <strong>Interested in becoming an Fhorge Course Creator?</strong>
                                                     </p>
                                                     <p>Fill in your details in the application form below. After you submit your form you will receive our starter information pack and a summary of next steps. Please note that all questions marked with an asterisk * require a response.</p>
                                                 </div>
@@ -2286,7 +2286,7 @@
                                                 <div class="col-sm-12">
                                                     <h3>
                                                         <span class="required">*</span>
-                                                        Share with us in your own words what motivates you to publish with Alison
+                                                        Share with us in your own words what motivates you to publish with Fhorge
                                                     </h3>
                                                     <p>Max 200 characters</p>
                                                     <br/>
@@ -2380,25 +2380,25 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">LEARN ABOUT ALISON</div>
+                            <div class="footer_h3">LEARN ABOUT FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/about/how-it-works">How Alison Works</a>
+                                    <a href="https://alison.com/about/how-it-works">How Fhorge Works</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/about/about-alison-courses">About Alison Courses</a>
+                                    <a href="https://alison.com/about/about-alison-courses">About Fhorge Courses</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/our-story">Our Story</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/programmes">Alison Programmes</a>
+                                    <a href="https://alison.com/programmes">Fhorge Programmes</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/course-creators">Our Course Creators</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/empower-us">Empower Alison</a>
+                                    <a href="https://alison.com/empower-us">Empower Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/pricing">Pricing</a>
@@ -2436,7 +2436,7 @@
                                     <a href="https://alison.com/graduate-outcomes">Graduate Outcomes</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/testimonials">Alison Testimonials</a>
+                                    <a href="https://alison.com/testimonials">Fhorge Testimonials</a>
                                 </li>
                                 <li>
                                     <a title="Coronavirus Emergency - Free Course" href="https://alison.com/coronavirus">COVID19 Emergency Courses</a>
@@ -2465,7 +2465,7 @@
                                     <a href="https://alison.com/careers">Discover Careers</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/profile">Alison Profile</a>
+                                    <a href="https://alison.com/profile">Fhorge Profile</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/cv?source=profile">Build Your Resumé</a>
@@ -2477,7 +2477,7 @@
                                     <a href="https://alison.com/psychometric-test/wellbeing">Free Well-being Check up</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/free-lms-programme">Alison for Business</a>
+                                    <a href="https://alison.com/free-lms-programme">Fhorge for Business</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/e-learning-africa">eLearning Africa</a>
@@ -2497,10 +2497,10 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">EARN ON ALISON</div>
+                            <div class="footer_h3">EARN ON FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/publish">Create Courses on Alison</a>
+                                    <a href="https://alison.com/publish">Create Courses on Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/affiliates/learn-to-earn">Affiliate Programme</a>
@@ -2583,29 +2583,29 @@
                 </div>
                 <div class="row-4 apps">
                     <a href="https://apps.apple.com/app/apple-store/id1558468968?pt=118422314&ct=portal_app_page&mt=8" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Alison app on iPhone">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Fhorge’son iPhone">
                     </a>
                     <a href="https://play.google.com/store/apps/details?id=com.alison.mobile.flutter" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Alison app on Android">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Fhorge app on Android">
                     </a>
                 </div>
                 <div class="clearfix"></div>
                 <div class="row-5 policies">
                     <ul class="policies-list">
                         <li class="icon-rights">
-                            <span>&copy;Alison 2023</span>
+                            <span>&copy;Fhorge 2023</span>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Alison Privacy Policy">Privacy</a>
+                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Fhorge Privacy Policy">Privacy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use" title="Alison Terms and conditions">Terms</a>
+                            <a href="https://alison.com/about/terms-of-use" title="Fhorge Terms and conditions">Terms</a>
                         </li>
                         <li class="icon-rights">
                             <a class="cancel-scroll" href="https://alison.com/about/terms-of-use?privacy-policy#alison_cookie_policy" title="Alison Cookie Policy">Cookie Policy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/sitemap" title="Alison Sitemap">Sitemap</a>
+                            <a href="https://alison.com/sitemap" title="Fhorge Sitemap">Sitemap</a>
                         </li>
                     </ul>
                 </div>
