--- a/course.html
+++ b/course.html
@@ -153,10 +153,10 @@
         <script defer src="https://cdn01.alison-static.net/public/html/vendor/js/lazysizes.min.js?v=2.1" onload="extendFunctionality()"></script>
         <link rel="manifest" href="https://alison.com/manifest.json">
         <meta charset="utf-8">
-        <title>Python for Data Science: From the Basics to Advanced | Alison</title>
+        <title>Python for Data Science: From the Basics to Advanced | Fhorge</title>
         <meta name="keywords" content=""/>
         <meta name="description" content="This free data science and programming course breaks down the fundamentals of Python and its two key libraries, NumPy and Pandas. No subscriptions fees."/>
-        <meta property="og:title" content="Python for Data Science: From the Basics to Advanced | Alison"/>
+        <meta property="og:title" content="Python for Data Science: From the Basics to Advanced | Fhorge"/>
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://cdn01.alison-static.net/courses/4242/alison_courseware_intro_4242.jpg">
         <meta property="og:url" content="https://alison.com/course/python-for-data-science-from-the-basics-to-advanced"/>
@@ -165,7 +165,7 @@
         <meta name="twitter:site" content="@AlisonCourses">
         <meta name="twitter:creator" content="@AlisonCourses">
         <meta name="twitter:url" content="https://alison.com/course/python-for-data-science-from-the-basics-to-advanced">
-        <meta name="twitter:title" content="Python for Data Science: From the Basics to Advanced | Alison">
+        <meta name="twitter:title" content="Python for Data Science: From the Basics to Advanced | Fhorge">
         <meta name="twitter:description" content="This free data science and programming course breaks down the fundamentals of Python and its two key libraries, NumPy and Pandas. No subscriptions fees.">
         <meta name="twitter:image" content="https://cdn01.alison-static.net/courses/4242/alison_courseware_intro_4242.jpg">
         <meta name="csrf-token" content="tmG69f846m0x8YED0jzqSVW2JJ4vNgb8aV3MCN96">
@@ -449,7 +449,7 @@
                             </div>
                             <div class="flms-copy">
                                 <p>Do you represent a business or organization that would like to train and upskill their employees?</p>
-                                <p>If yes, check out Alison’s Free Learning Management System here!</p>
+                                <p>If yes, check out Fhorge’s Free Learning Management System here!</p>
                                 <div class="flms-but">
                                     <a href="https://alison.com/free-lms-programme" class="btn-flms btn-flms--green">Yes</a>
                                     <a href="#0" class="btn-flms btn-flms--blank">Not For Me</a>
@@ -468,7 +468,7 @@
                             <span class="icon-cross2 aff__close"></span>
                             <img class="lazyload" data-src="html/site/img/affiliates/not-affiliate.svg"/>
                             <div class="aff__text">
-                                <p>Become an Alison Affiliate in one click, and start earning money by sharing any page on the Alison website. </p>
+                                <p>Become an Fhorge Affiliate in one click, and start earning money by sharing any page on the Fhorge website. </p>
                                 <a class="aff__btn" href="https://alison.com/affiliates/learn-to-earn">Become an Affiliate</a>
                             </div>
                         </div>
@@ -620,7 +620,7 @@
                 <ol class="breadcrumb ">
                     <li id="home-link">
                         <i class="icon-home"></i>
-                        <a href="https://alison.com" title="Alison Homepage">Home</a>
+                        <a href="https://alison.com" title="Fhorge Homepage">Home</a>
                     </li>
                     <i class="icon-right-arrow"></i>
                     <li>
@@ -788,7 +788,7 @@
                         Description 
                     </div>
                     <div class="l-tabs__title" data-tab="cert-desc">
-                        <span>Alison </span>
+                        <span>Fhorge </span>
                         Certificates 
                     </div>
                 </div>
@@ -846,13 +846,13 @@
                     </div>
                     <div class="l-desc cert-desc" style="display:none;">
                         <p>
-                            All Alison courses are free to enrol study and complete. To successfully complete this <span class="course-type"></span>
-                            course and become an Alison Graduate, you need to achieve 80% or higher in each course assessment. Once you have completed this <span class="course-type"></span>
+                            All Fhorge courses are free to enrol study and complete. To successfully complete this <span class="course-type"></span>
+                            course and become an Fhorge Graduate, you need to achieve 80% or higher in each course assessment. Once you have completed this <span class="course-type"></span>
                             course, you have the option to acquire an official Diploma, which is a great way to share your achievement with the world. 
                         </p>
                         <div class="l-list l-list--tick">
                             <h6>
-                                Your Alison <span class="course-type"></span>
+                                Your Fhorge <span class="course-type"></span>
                                 is:
                             </h6>
                             <ul>
@@ -866,7 +866,7 @@
                         <div class="l-flex l-flex--even">
                             <div class="l-list l-list--bullet">
                                 <h6>
-                                    Alison offers <span class="l-list__color">3 types</span>
+                                    Fhorge offers <span class="l-list__color">3 types</span>
                                     of Diplomas for completed Diploma courses:
                                 </h6>
                                 <ul>
@@ -905,10 +905,10 @@
                         </div>
                         <p>
                             All <span class="course-type"></span>
-                            are available to purchase through the <a href="https://alison.com/shop">Alison Shop</a>
-                            . For more information on purchasing Alison <span class="course-type"></span>
+                            are available to purchase through the <a href="https://alison.com/shop">Fhorge Shop</a>
+                            . For more information on purchasing Fhorge <span class="course-type"></span>
                             , please visit our <a href="https://alison.com/faqs">FAQs</a>
-                            . If you decide not to purchase your Alison <span class="course-type"></span>
+                            . If you decide not to purchase your Fhorge <span class="course-type"></span>
                             , you can still demonstrate your achievement by sharing your Learner Record or Learner Achievement Verification, both of which are accessible from your <a href="https://alison.com/dashboard">Dashboard</a>
                             . For more details on our <span class="course-type"></span>
                             pricing, please visit our <a href="https://alison.com/about/pricing">Pricing Page</a>
@@ -949,7 +949,7 @@
                                     </span>
                                     <span>
                                         <h5>Certify Your Skills</h5>
-                                        A CPD accredited Alison Diploma/Certificate certifies the skills you’ve learned 
+                                        A CPD accredited Fhorge Diploma/Certificate certifies the skills you’ve learned 
                                     </span>
                                 </li>
                                 <li>
@@ -958,7 +958,7 @@
                                     </span>
                                     <span>
                                         <h5>Stand Out From The Crowd</h5>
-                                        Add your Alison Certification to your resumé and stay ahead of the competition 
+                                        Add your Fhorge Certification to your resumé and stay ahead of the competition 
                                     </span>
                                 </li>
                                 <li>
@@ -967,7 +967,7 @@
                                     </span>
                                     <span>
                                         <h5>Advance in Your Career</h5>
-                                        Share your Alison Certification with potential employers to show off your skills and capabilities 
+                                        Share your Fhorge Certification with potential employers to show off your skills and capabilities 
                                     </span>
                                 </li>
                             </ul>
@@ -1061,7 +1061,7 @@
                 </div>
                 <div class="mobile-scroll">
                     <div class="l-main-pub__inner">
-                        <h3>About Your Alison Course Publisher</h3>
+                        <h3>About Your Fhorge Course Publisher</h3>
                         <h4 class="empty" style="display: none">
                             <strong class="course-publisher course-publisher--stats">-</strong>
                             Alison Stats
@@ -1073,7 +1073,7 @@
                             <div class="l-main-pub__stats">
                                 <h4 class="empty">
                                     <strong class="course-publisher course-publisher--stats">-</strong>
-                                    Alison Stats
+                                    Fhorge Stats
                                 </h4>
                                 <span class="empty">
                                     <span class="icon-learners-1"></span>
@@ -1204,25 +1204,25 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">LEARN ABOUT ALISON</div>
+                            <div class="footer_h3">LEARN ABOUT FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/about/how-it-works">How Alison Works</a>
+                                    <a href="https://alison.com/about/how-it-works">How Fhorge Works</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/about/about-alison-courses">About Alison Courses</a>
+                                    <a href="https://alison.com/about/about-alison-courses">About Fhorge Courses</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/our-story">Our Story</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/programmes">Alison Programmes</a>
+                                    <a href="https://alison.com/programmes">Fhorge Programmes</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/publishers">Our Course Creators</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/empower-us">Empower Alison</a>
+                                    <a href="https://alison.com/empower-us">Empower Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/about/pricing">Pricing</a>
@@ -1260,7 +1260,7 @@
                                     <a href="https://alison.com/graduate-outcomes">Graduate Outcomes</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/testimonials">Alison Testimonials</a>
+                                    <a href="https://alison.com/testimonials">Fhorge Testimonials</a>
                                 </li>
                                 <li>
                                     <a title="Coronavirus Emergency - Free Course" href="https://alison.com/coronavirus">COVID19 Emergency Courses</a>
@@ -1286,7 +1286,7 @@
                                     <a href="https://alison.com/careers">Discover Careers</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/profile">Alison Profile</a>
+                                    <a href="https://alison.com/profile">Fhorge Profile</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/resume-builder">Build Your Resumé</a>
@@ -1298,7 +1298,7 @@
                                     <a href="https://alison.com/psychometric-test/wellbeing">Free Well-being Check up</a>
                                 </li>
                                 <li>
-                                    <a href="https://alison.com/free-lms-programme">Alison for Business</a>
+                                    <a href="https://alison.com/free-lms-programme">Fhorge for Business</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/e-learning-africa">eLearning Africa</a>
@@ -1318,10 +1318,10 @@
                 <div class="col-inner">
                     <div class="ft-column">
                         <div class="ft-column-inner">
-                            <div class="footer_h3">EARN ON ALISON</div>
+                            <div class="footer_h3">EARN ON FHORGE</div>
                             <ul>
                                 <li>
-                                    <a href="https://alison.com/publish">Create Courses on Alison</a>
+                                    <a href="https://alison.com/publish">Create Courses on Fhorge</a>
                                 </li>
                                 <li>
                                     <a href="https://alison.com/affiliates/learn-to-earn">Affiliate Programme</a>
@@ -1404,29 +1404,29 @@
                 </div>
                 <div class="row-4 apps">
                     <a href="https://apps.apple.com/app/apple-store/id1558468968?pt=118422314&ct=portal_app_page&mt=8" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Alison app on iPhone">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-appstore.svg" alt="Download on the App Store" title="Download the Fhorge app on iPhone">
                     </a>
                     <a href="https://play.google.com/store/apps/details?id=com.alison.mobile.flutter" target="_blank">
-                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Alison app on Android">
+                        <img class="lazyload" width="156" height="48" data-src="https://cdn01.alison-static.net/public/html/site/img/footer-desktop-playstore.svg" alt="Download on Google Play" title="Download the Fhorge app on Android">
                     </a>
                 </div>
                 <div class="clearfix"></div>
                 <div class="row-5 policies">
                     <ul class="policies-list">
                         <li class="icon-rights">
-                            <span>&copy;Alison 2023</span>
+                            <span>&copy;Fhorge 2023</span>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Alison Privacy Policy">Privacy</a>
+                            <a href="https://alison.com/about/terms-of-use?privacy-policy" title="Fhorge Privacy Policy">Privacy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/about/terms-of-use" title="Alison Terms and conditions">Terms</a>
+                            <a href="https://alison.com/about/terms-of-use" title="Fhorge Terms and conditions">Terms</a>
                         </li>
                         <li class="icon-rights">
                             <a class="cancel-scroll" href="https://alison.com/about/terms-of-use?privacy-policy#alison_cookie_policy" title="Alison Cookie Policy">Cookie Policy</a>
                         </li>
                         <li class="icon-rights">
-                            <a href="https://alison.com/sitemap" title="Alison Sitemap">Sitemap</a>
+                            <a href="https://alison.com/sitemap" title="Fhorge Sitemap">Sitemap</a>
                         </li>
                     </ul>
                 </div>
